# celery-test

./: README.md  pyproject.toml
celery_test/: app.py
celery_test/tasks/: __init__.py  timed_tasks.py
tests/: output_duration.txt  output_priority.txt  test_analyse_output.py  test_priority.py  test_timed.py
