[tool.poetry]
name = "celery-test"
version = "0.1.0"
description = ""
authors = ["Patrick <patrick@paylogic.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
pytest = "^8.2.2"
redis = "^5.0.7"
pytest-repeat = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
